<?xml version="1.0" encoding="UTF-8"?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>co.cubestudio</groupId>
    <artifactId>vitral-jogl</artifactId>
    <packaging>jar</packaging>
    <version>1.0</version>

    <name>vitral-jogl</name>
    <url>https://sourceforge.net/projects/vitral</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>install</defaultGoal>
        <directory>target</directory>
        <finalName>vitral-1.0</finalName>
        <sourceDirectory>${project.basedir}/src</sourceDirectory>
        <outputDirectory>target/classes</outputDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>

        <repository>
            <id>jogamp</id>
            <url>https://jogamp.org/deployment/maven/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>2.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>2.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all-main</artifactId>
            <version>2.5.0</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt-main</artifactId>
            <version>2.5.0</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>co.cubestudio</groupId>
            <artifactId>vitral-base</artifactId>
            <version>1.0</version>
        </dependency>

        <dependency>
            <groupId>co.cubestudio</groupId>
            <artifactId>vitral-awt</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>

</project>
